<resources>
    <string name="app_name">Calci</string>
    <string name="nav_calc">Calculator</string>
    <string name="nav_conv">Base Converter</string>
    <string name="nav_util">Utilities</string>
    <string name="nav_about">About</string>
    <string name="nav_feedback">Feedback</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="conv_from">Convert From: </string>
    <string-array name="spinner">
        <item>Binary</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dots">...</string>
    <string name="wrong_input">Wrong Input. Enter input according to the selected base.</string>
    <string name="hexadecimal">HexaDecimal</string>
    <string name="decimal">Decimal</string>
    <string name="octal">Octal</string>
    <string name="binary">Binary</string>
    <string name="convert">Convert</string>
    <string name="input">Input</string>
</resources>