<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    tools:context=".ConverterFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:text="@string/conv_from"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#2196F3"
            android:entries="@array/spinner"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#03A9F4"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FAFAFA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/input"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/inputNum"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/convert"
            app:layout_constraintCircleRadius="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNum" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/binary"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrong" />

        <EditText
            android:id="@+id/bin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#03A9F4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dots"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/hex" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/octal"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/oct"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/oct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#03A9F4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dots"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/hex"
            app:layout_constraintTop_toBottomOf="@+id/bin" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/decimal"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/dec"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#03A9F4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dots"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/hex"
            app:layout_constraintTop_toBottomOf="@+id/oct" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hexadecimal"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/hex"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/hex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#03A9F4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dots"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/dec" />

        <TextView
            android:id="@+id/wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wrong_input"
            android:textColor="#FF5858"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>